envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
 
node:
  cluster: envoy-gateway
 
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                collector_cluster: zipkin
                collector_endpoint: "/api/v2/spans"
                collector_endpoint_version: HTTP_JSON
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/security"
                route:
                  prefix_rewrite: "/api/auth/getToken"
                  cluster: security_cluster      
              - match:
                  prefix: "/account"
                route:
                  prefix_rewrite: "/api/account/getAccounts"
                  cluster: account_cluster
              - match:
                  prefix: "/deposit"
                route:
                  prefix_rewrite: "/api/transaction/deposit"
                  cluster: deposit_cluster
              - match:
                  prefix: "/withdrawal"
                route:
                  prefix_rewrite: "/api/transaction/withdrawal"
                  cluster: withdrawal_cluster
              - match:
                  prefix: "/movement"
                route: 
                  prefix_rewrite: "/api/movement/getMovementByAccountId"
                  cluster: movement_cluster
              response_headers_to_add:
              - header:
                  key: "x-b3-traceid"
                  value: "%REQ(x-b3-traceid)%"
              - header:
                  key: "x-request-id"
                  value: "%REQ(x-request-id)%"        
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: security_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: security_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-service-security #host.docker.internal
                port_value: 80 #5001
  - name: account_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: account_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-service-account #host.docker.internal
                port_value: 80 #5002
  - name: deposit_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: deposit_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-service-deposit  #host.docker.internal   #localhost  
                port_value: 80  #5003
  - name: withdrawal_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: withdrawal_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-service-withdrawal  #host.docker.internal   #localhost  
                port_value: 80 #5004
  - name: movement_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: movement_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-service-movement  #host.docker.internal   #localhost  
                port_value: 80  #5005
  - name: zipkin
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: zipkin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 164.90.255.230
                port_value: 9411
